# ml-topsis-vikor

./: .coveragerc  .gitignore  LICENSE  README.md  __init__.py  data_loader.py  logger.py  main.py  output_manager.py  pyproject.toml  requirements.txt  run.py  visualization.py
analysis/: __init__.py  sensitivity.py
data/: 2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  data.csv
data/codebook/: codebook_criteria.csv  codebook_provinces.csv  codebook_subcriteria.csv
docs/: METHODOLOGY_RECOMMENDATIONS.md  METHODS.md  PANEL_DATA_METHODOLOGY.md  REVISED_METHODOLOGY_PANEL_DATA.md  WORKFLOW.md  dataset_description.md  forecast.md  future_directions.md  objective.md
evidential_reasoning/: __init__.py  base.py  hierarchical_er.py
forecasting/: README.md  __init__.py  base.py  features.py  linear.py  neural.py  random_forest_ts.py  unified.py
mcdm/: __init__.py
mcdm/ifs/: __init__.py  base.py  ifs_copras.py  ifs_edas.py  ifs_promethee.py  ifs_saw.py  ifs_topsis.py  ifs_vikor.py
mcdm/traditional/: __init__.py  copras.py  edas.py  promethee.py  saw.py  topsis.py  vikor.py
outputs/figures/: figure_manifest.json
outputs/reports/: analysis_report.txt  report.txt
outputs/results/: aggregation_metadata.json  config_snapshot.json  criterion_weights.csv  cv_scores.csv  data_summary_statistics.csv  execution_summary.json  feature_importance.csv  final_rankings.csv  forecast_model_weights_2025.csv  forecast_summary_2025.json  mcdm_rank_comparison.csv  mcdm_scores_C01.csv  mcdm_scores_C02.csv  mcdm_scores_C03.csv  mcdm_scores_C04.csv  mcdm_scores_C05.csv  mcdm_scores_C06.csv  mcdm_scores_C07.csv  mcdm_scores_C08.csv  mcdm_scores_detailed.csv  output_manifest.json  predicted_components_2025.csv  predicted_rankings_2025.csv  prediction_uncertainty_2025.csv  prediction_uncertainty_er.csv  rf_test_metrics.csv  robustness_summary.csv  sensitivity_analysis.csv  stacking_performance.csv  stacking_weights.csv  weights_analysis.csv
ranking/: __init__.py  pipeline.py
src/: __init__.py  config.py  data_loader.py  logger.py  main.py  output_manager.py  pipeline.py  pipeline_v2.py  visualization.py
src/analysis/: __init__.py  convergence.py  sensitivity.py  validation.py
src/ensemble/: __init__.py  aggregation.py  stacking.py
src/mcdm/: __init__.py  copras.py  edas.py  fuzzy_base.py  fuzzy_copras.py  fuzzy_edas.py  fuzzy_promethee.py  fuzzy_topsis.py  fuzzy_vikor.py  promethee.py  topsis.py  vikor.py  weights.py
src/mcdm/fuzzy/: copras.py  edas.py  promethee.py  topsis.py  vikor.py
src/mcdm/traditional/: copras.py  edas.py  promethee.py  topsis.py  vikor.py
src/ml/: __init__.py  advanced_forecasting.py  lstm_forecast.py  neural_forecasting.py  panel_regression.py  random_forest_ts.py  rough_sets.py  unified_forecasting.py
src/ml/forecasting/: linear.py  tree_ensemble.py
src/weighting/: __init__.py  base.py  bootstrap.py  critic.py  ensemble.py  entropy.py  fusion.py  hybrid_weighting.py  merec.py  panel_weighting.py  robust_global.py  standard_deviation.py  test_weighting.py
src/weighting/docs/: README.md  new-strategy.txt  weight.md
tests/: __init__.py  conftest.py  test_core.py  test_quick.py
tests/weighting/: __init__.py  test_weighting.py
weighting/: __init__.py  adaptive.py  bootstrap.py  critic.py  entropy.py  fusion.py  hybrid_weighting.py  merec.py  normalization.py  validation.py
