[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-mcdm"
version = "2.0.0"
description = "Advanced Machine Learning Enhanced Multi-Criteria Decision Making Framework with 10 MCDM Methods, Time-Series Forecasting, and Robust Ensemble Aggregation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<3.13"
authors = [
    {name = "Son Hoang", email = "hoang@example.com"}
]
maintainers = [
    {name = "Son Hoang", email = "hoang@example.com"}
]
keywords = [
    "MCDM",
    "multi-criteria decision making",
    "machine learning",
    "time-series forecasting",
    "fuzzy logic",
    "decision support",
    "TOPSIS",
    "VIKOR",
    "PROMETHEE",
    "COPRAS",
    "EDAS",
    "ensemble methods",
    "rank aggregation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
]
ml = [
    "tensorflow>=2.10.0,<3.0.0",
    "keras>=2.10.0,<3.0.0",
    "xgboost>=1.7.0,<3.0.0",
    "lightgbm>=3.3.0,<5.0.0",
]
analysis = [
    "shap>=0.42.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
all = [
    "ml-mcdm[dev,ml,analysis]",
]

[project.urls]
Homepage = "https://github.com/hoangsonww/ml-mcdm"
Documentation = "https://github.com/hoangsonww/ml-mcdm/blob/main/README.md"
Repository = "https://github.com/hoangsonww/ml-mcdm"
Issues = "https://github.com/hoangsonww/ml-mcdm/issues"
Changelog = "https://github.com/hoangsonww/ml-mcdm/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "."}
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["mcdm*", "weighting*", "ranking*", "analysis*", "forecasting*", "evidential_reasoning*"]
exclude = ["tests*", "docs*", "outputs*", "data*", ".venv*", "*.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json", "*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | outputs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "outputs/*", ".venv/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^outputs/",
    "^\\.venv/",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0212",  # Access to protected member
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-n=auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "fuzzy: marks tests for fuzzy MCDM methods",
    "ml: marks tests for machine learning components",
    "ensemble: marks tests for ensemble methods",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
